[package]
name = "set2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
base64 = "0.13.0"
openssl = "0.10.41"
lazy_static = "1.4.0"
itertools = "0.10.3"
aes = "0.8.1"
rand = "0.8.5"
set1 = { path="../set1" }
